@@ -14,7 +14,7 @@ void C_init_node(SEXP node, int nobs, int ninputs, int nsurr, int q) {
          terminal, prediction;
 
     if (LENGTH(node) < NODE_LENGTH)
-        error("node is not a list with at least %s elements", NODE_LENGTH);
+        error("node is not a list with at least %d elements", NODE_LENGTH);
         
     SET_VECTOR_ELT(node, S3_NODEID, nodeID = allocVector(INTSXP, 1));
     if (nobs > 0) 
@@ -101,7 +101,7 @@ void C_init_orderedsplit(SEXP split, int nobs) {
     SEXP variableID, splitpoint, splitstatistics, ordered, toleft;
     
     if (LENGTH(split) < SPLIT_LENGTH)
-        error("split is not a list with at least %s elements", SPLIT_LENGTH);
+        error("split is not a list with at least %d elements", SPLIT_LENGTH);
         
     SET_VECTOR_ELT(split, S3_VARIABLEID, 
                    variableID = allocVector(INTSXP, 1));
@@ -125,7 +125,7 @@ void C_init_nominalsplit(SEXP split, int nlevels, int nobs) {
     SEXP variableID, splitpoint, splitstatistics, ordered, toleft, table;
     
     if (LENGTH(split) < SPLIT_LENGTH)
-        error("split is not a list with at least %s elements", SPLIT_LENGTH);
+        error("split is not a list with at least %d elements", SPLIT_LENGTH);
 
     SET_VECTOR_ELT(split, S3_VARIABLEID, variableID = allocVector(INTSXP, 1));
     SET_VECTOR_ELT(split, S3_ORDERED, ordered = allocVector(LGLSXP, 1));
